clang: Make sure include paths are unique

Summary:
std::unique() is not enough because it only removes consecutive
duplicates.

In my case Path(url).parent() pushed into the list at line
"paths.push_front(Path(url).parent());" was duplicating an existing
include path probably generated by CMake.

BUG: 361716

Reviewers: mwolff, kfunk

Reviewed By: kfunk

Subscribers: brauch, kfunk, kdevelop-devel

Differential Revision: https://phabricator.kde.org/D2765